objects/wkdw__HRSCSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This entity represents general settings for HRSC Package.</description>
    <fields>
        <fullName>wkdw__MaxDaysCompletedTransition__c</fullName>
        <defaultValue>30</defaultValue>
        <description>The maximum number of days a completed transition plan will display on the Manager and Employee’s home page</description>
        <label>MaxDaysCompletedTransition</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkdw__ShowPendingTasksOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display only pending tasks in the onboarding task list.</description>
        <inlineHelpText>When selected, only pending tasks are displayed in the onboarding task checklist. When deselected, all tasks are displayed.</inlineHelpText>
        <label>Show Only Pending Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkdw__WelcomeTaskVisibilityOffset__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of days after the user&apos;s last onboarding task was completed when the Welcome Task component will not be displayed.</description>
        <inlineHelpText>In Days</inlineHelpText>
        <label>Welcome Task Visibility Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HRSC Settings</label>
</CustomObject>